--- a/style.css
+++ b/style.css
@@ -5,7 +5,13 @@
 
 body {
   margin: 0;
-  background: #000;
+  min-height: 100vh;
+  background-image: url("background.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+
   color: #fff;
   text-align: center;
 }
