--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 .bg {
   position: fixed;
   inset: 0;
-  background-image: url("background.png");
+  background-image: url("https://yourname.github.io/valentine/background.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
